@@ -17,6 +17,8 @@ v1.9.10
 + added imdb::videosites() to retrieve the external trailer links again
 ! fixed the imdb_trailer class again (at least basically)
 + pilot::trailers() now delivers content from MoviePilot
++ imdb::trailers() now also supports the "extended data" introduced by pilot::trailers():
+  Passing TRUE as parameter, instead of simply the URLs you get some additional data
 
 v1.9.9 (24.02.2010)
 -------------------
